# transit-insight

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py  home_page.py
dashboard/.streamlit/: config.toml
dashboard/archived/: 05_Route_Analysis.py
dashboard/components/: charts.py  filters.py  nav.py  page_guard.py  reliability_ui.py
dashboard/pages/: 01_Realtime.py  03_Reliability.py
dashboard/utils/: agency_config.py  agency_loader.py  corridor_ref.py  db.py  gtfs.py  (+9 more)
docs/: AGENCY_DATA_AUDIT.md  ARCHITECTURE.md  CORRIDOR_REF_VALIDATION.md  DATA_FLOW.md  DIAGNOSTICS_DISPLAY_VALIDATION.md  GITHUB_AND_DEPLOY.md  HEADWAY_METHODOLOGY_VALIDATION.md  OPTIMIZATION.md  RELIABILITY_SANITY_AUDIT.md  SCHEDULED_AND_PASS_EVENT_VALIDATION.md  SERVICE_DAY_FILTER_IMPACT.md  STM_TRIP_MATCH_INVESTIGATION.md  TRANSLINK_SPEED_VALIDATION.md  research_notes.md
scripts/: agency_data_audit.py  benchmark_cache_layers.py  benchmark_route29_headway.py  inspect_duckdb_cache.py  investigate_stm_trip_match.py  reliability_sanity_audit.py  validate_active_agencies.py  validate_corridor_refs.py  validate_diagnostics_display.py  validate_headway_methodology.py  validate_pages_load.py  validate_scheduled_and_pass_events.py  validate_service_day_filter_impact.py  validate_translink_speed.py  validate_ttc_app.py  verify_speed_fix.py
tests/: conftest.py  test_agency_loader.py  test_corridor_ref.py  test_diagnostics_display.py  test_duckdb_cache_config.py  test_metrics.py  test_scheduled_headways.py  test_speed_utils.py
(+23 files in other folders)
